gcc/testsuite/gm2/iso/fail/arraymismatch.mod
MODULE arraymismatch ;

VAR
   a: ARRAY [0..3] OF REAL ;
   b: ARRAY [0..4] OF REAL ;
BEGIN
   a := b
END arraymismatch.
